--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
-                 "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.js"
@@ -120,6 +120,10 @@
               "devServerTarget": "naming-search:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
